# 26_wuren_LiaoYutao

./: .gitignore  README.md
Week1/: CMake_Study_Notes.md  linux_practice.sh
Week1/CMake 1/: CMakeLists.txt
Week1/CMake 1/common/: CMakeLists.txt
Week1/CMake 1/common/kalman/: CMakeLists.txt
Week1/CMake 1/common/math/: CMakeLists.txt
Week1/CMake 1/modules/A1/: CMakeLists.txt
Week1/CMake 1/modules/A1/src/: A13.cpp
Week1/CMake 1/modules/A2/: CMakeLists.txt
Week1/CMake 1/modules/A2/include/: A2.h
Week1/CMake 1/modules/M1/: CMakeLists.txt
Week1/CMake 1/modules/M2/: CMakeLists.txt
Week1/linux_practice/docs/: daily_report.txt
Week2/homework/: README.md
Week2/homework/作业1/: genetic_algorithm.py
Week2/homework/作业2/: 01_多元线性回归_加州房价.ipynb  02_L2正则化岭回归_加州房价.ipynb
Week2/homework/作业2/.ipynb_checkpoints/: 01_多元线性回归_加州房价-checkpoint.ipynb  02_L2正则化岭回归_加州房价-checkpoint.ipynb
Week2/homework/作业3/: SVM_Iris_Exp.ipynb
Week2/homework/作业3/.ipynb_checkpoints/: SVM_Iris_Exp-checkpoint.ipynb
Week2/homework/作业4/: Kmeans_Exp.ipynb
Week2/homework/作业4/.ipynb_checkpoints/: Kmeans_Exp-checkpoint.ipynb
Week3/: README.md  net copy.py  test.py  深度学习笔记.md  深度学习论文阅读记录.md  锥桶图像分类.ipynb
Week3/.ipynb_checkpoints/: 锥桶图像分类-checkpoint.ipynb
Week3/pth/: model_best_100.0.pth  model_best_99.07833862304688.pth  model_best_99.53916931152344.pth  modeltemp.pth
Week4/: README.md  录屏 2026-06-02 23-49-41.webm
Week4/ros2_learning-main/ros2_homework_advanced/: publish_marker_tamplate.md
Week4/ros2_learning-main/ros2_homework_advanced/cone_map_visualizer/: CMakeLists.txt  README.md  package.xml
Week4/ros2_learning-main/ros2_homework_advanced/cone_map_visualizer/launch/: visualize_cone_map.launch.py
Week4/ros2_learning-main/ros2_homework_advanced/cone_map_visualizer/rviz/: cone_map.rviz
Week4/ros2_learning-main/ros2_homework_advanced/cone_map_visualizer/src/: cone_map_visualizer.cpp
Week4/ros2_learning-main/ros2_homework_advanced/fsd_common_msgs/: CMakeLists.txt  package.xml
Week4/ros2_learning-main/ros2_homework_advanced/fsd_common_msgs/msg/: AsState.msg  AsensingMessage.msg  CanFrames.msg  CarState.msg  CarStateDt.msg  Cone.idl  Cone.msg  ConeDbscan.msg  ConeDetections.msg  ConeDetectionsDbscan.msg  ControlCommand.msg  DecisionFlag.msg  DrivingDynamics.msg  EchievMessage.msg  Feedback.msg  InsDelta.msg  Map.idl  Map.msg  Mission.msg  RemoteControlCommand.msg  ResAndAmi.msg  SkidpadGlobalCenterLine.msg  Time.msg  Track.msg  TrajectoryPoint.msg  Visualization.msg  YoloCone.msg  YoloConeDetections.msg  YoloConeDetectionsTrack.msg  YoloConeTrack.msg
Week4/ros2_learning-main/ros2_homework_basic_ws/: HOMEWORK_USAGE.md  README.md
Week4/ros2_learning-main/ros2_homework_basic_ws/src/ros2_homework_basic_package/: package.xml  setup.cfg  setup.py
Week4/ros2_learning-main/ros2_homework_basic_ws/src/ros2_homework_basic_package/config/: figure_eight.yaml
Week4/ros2_learning-main/ros2_homework_basic_ws/src/ros2_homework_basic_package/launch/: figure_eight.launch.py
Week4/ros2_learning-main/ros2_homework_basic_ws/src/ros2_homework_basic_package/resource/: ros2_homework_basic_package
Week4/ros2_learning-main/ros2_homework_basic_ws/src/ros2_homework_basic_package/ros2_homework_basic_package/: __init__.py  figure_eight_turtle.py  keyboard_quit_node.py
Week5/Control/作业1/: README.md  bicycle_models_problem.m  lane_follower.m
Week5/Control/作业2/: CMakeLists.txt  README.md
Week5/Control/作业2/scripts/: q3_osqp.py
Week5/Control/作业2/src/: main.cpp
homework/percep_node+track/fsd_common_msgs/: CMakeLists.txt
homework/percep_node+track/right_angle_stack/launch/: right_angle_wsl_headless.launch.py
homework/percep_node+track/tracks/models/yellow_cone/: model.sdf
homework/percep_node_track/: README.md
homework/percep_node_track/right_angle_stack/launch/: right_angle_harmonic.launch.py  right_angle_sim.launch.py  right_angle_wsl_headless.launch.py
homework/percep_node_track/right_angle_stack/right_angle_stack/: cone_mapper.py  localization_fusion.py  sim_sensor_bridge.py  utils.py
homework/percep_node_track/tracks/models/blue_cone/: model.sdf
homework/percep_node_track/tracks/models/yellow_cone/: model.sdf
vscode/percep_node+track/: README.md
vscode/percep_node+track/fsd_common_msgs/msg/: ConeDetections.msg
vscode/percep_node+track/right_angle_stack/: package.xml  setup.py
vscode/percep_node+track/right_angle_stack/config/: right_angle_stack.yaml
vscode/percep_node+track/right_angle_stack/launch/: right_angle_sim.launch.py
vscode/percep_node+track/right_angle_stack/right_angle_stack/: cone_mapper.py  localization_fusion.py  pure_pursuit_controller.py  right_angle_planner.py  track_model.py  track_perception.py
vscode/percep_node+track/right_angle_stack/urdf/: right_angle_car.urdf.xacro
vscode/percep_node+track/tracks/models/blue_cone/: model.sdf
vscode/percep_node+track/tracks/models/yellow_cone/: model.sdf
vscode/percep_node+track/tracks/worlds/: right_angle.world
大作业/percep_node+track/: README.md
大作业/percep_node+track/fsd_common_msgs/: CMakeLists.txt
大作业/percep_node+track/fsd_common_msgs/msg/: Map.msg
大作业/percep_node+track/right_angle_stack/: setup.py
大作业/percep_node+track/right_angle_stack/launch/: right_angle_harmonic.launch.py  right_angle_sim.launch.py  right_angle_wsl_headless.launch.py
大作业/percep_node+track/right_angle_stack/models/right_angle_car_harmonic/: model.sdf
大作业/percep_node+track/right_angle_stack/right_angle_stack/: __init__.py  pure_pursuit_controller.py  right_angle_planner.py  sim_sensor_bridge.py  track_perception.py
大作业/percep_node+track/right_angle_stack/rviz/: right_angle.rviz
