<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  fsd_common_msgs 接口包描述文件。
  该包集中放置赛车感知、定位、控制和可视化相关消息定义。
-->
<package format="3">
  <name>fsd_common_msgs</name>
  <version>0.0.0</version>
  <description>The fsd_common_msgs package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <!-- 接口包使用 ament_cmake 构建。 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建期生成消息代码需要 rosidl_default_generators。 -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- 运行期导入消息类型需要 rosidl_default_runtime。 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 声明本包属于 ROS2 接口包分组，这是消息包必须的导出信息。 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 消息字段中引用到的外部消息包。 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <!-- 告诉 ament 该包按 CMake 包方式构建。 -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
